--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -6857,37 +6857,37 @@ button.bg-dark:hover {
 
 .rounded-top-0 {
   border-top-left-radius: 0 !important;
-  /* border-top-right-radius: 0 !important */
+  border-top-right-radius: 0 !important
 }
 
 .rounded-right {
   border-top-right-radius: .25rem !important;
-  /* border-bottom-right-radius: .25rem !important */
+  border-bottom-right-radius: .25rem !important
 }
 
 .rounded-right-0 {
   border-top-right-radius: 0 !important;
-  /* border-bottom-right-radius: 0 !important */
+  border-bottom-right-radius: 0 !important
 }
 
 .rounded-bottom {
   border-bottom-right-radius: .25rem !important;
-  /* border-bottom-left-radius: .25rem !important */
+  border-bottom-left-radius: .25rem !important
 }
 
 .rounded-bottom-0 {
   border-bottom-right-radius: 0 !important;
-  /* border-bottom-left-radius: 0 !important */
+  border-bottom-left-radius: 0 !important
 }
 
 .rounded-left {
   border-top-left-radius: .25rem !important;
-  /* border-bottom-left-radius: .25rem !important */
+  border-bottom-left-radius: .25rem !important
 }
 
 .rounded-left-0 {
   border-top-left-radius: 0 !important;
-  /* border-bottom-left-radius: 0 !important */
+  border-bottom-left-radius: 0 !important
 }
 
 .rounded-circle {
