--- a/styles/app.scss
+++ b/styles/app.scss
@@ -2,7 +2,7 @@
 /* Scrollbar - Start */
 
 * {
-  scrollbar-color: hsl(var(--muted-hs), calc(var(--muted-l) + 60)) transparent;
+  scrollbar-color: hsl(var(--muted-hs), calc(var(--muted-l) + 40%)) transparent;
   scrollbar-width: thin;
   cursor: default;
   /* word-break: break-word; */
@@ -21,7 +21,7 @@
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: hsl(var(--muted-hs), calc(var(--muted-l) + 60%));
+  background-color: hsl(var(--muted-hs), calc(var(--muted-l) + 40%));
   border-radius: 0
 }
 
@@ -340,6 +340,10 @@ label {
   }
 }
 
+.bg-primary input[type=checkbox]::before {
+  background-color: hsl(var(--muted-hs), calc(var(--muted-l) + 10))
+}
+
 input {
 
   &::-webkit-outer-spin-button,
@@ -364,21 +368,20 @@ input {
     padding: 0 !important;
     margin: 0;
     border-radius: 0.5rem;
-    background-color: hsl(var(--muted-hs), calc(var(--muted-l) + 10));
+    background-color: hsla(var(--white-hs), var(--white-l), 0.5);
+    color: unset;
     opacity: 1;
 
     &::before {
       content: '';
       display: block;
       height: 100%;
-      width: 1rem;
-      background-color: var(--secondary);
+      width: 100%;
+      opacity: 0.275;
+      background-color: currentColor;
       border-radius: inherit;
-      transition: width 0.25s ease;
+      transition: width 0.25s ease, opacity 0.25s;
 
-      .bg-secondary & {
-        background-color: hsl(var(--muted-hs), calc(var(--muted-l) + 10))
-      }
     }
 
     &::after {
@@ -390,20 +393,21 @@ input {
       width: 1rem;
       height: 1rem;
       padding: 0.25rem;
-      background-color: var(--secondary);
+      background-color: currentColor;
       border-radius: 50%;
       transform: translate(0, -50%);
       transition: left 0.25s ease, transform 0.25s ease;
     }
 
-    &:checked::before {
-      width: 100%;
-    }
+    &:checked {
+      &::before {
+        opacity: 0.575;
+      }
 
-    &:checked::after {
-      background-color: var(--primary);
-      left: 100%;
-      transform: translate(-100%, -50%);
+      &::after {
+        left: 100%;
+        transform: translate(-100%, -50%);
+      }
     }
 
     &.default {
@@ -489,7 +493,7 @@ input {
     align-items: center;
     justify-content: center;
     border-radius: inherit !important;
-    font-weight: bold;
+    /* font-weight: bold; */
     align-self: stretch;
     min-width: unset;
 
@@ -780,7 +784,7 @@ option[disabled]:first-of-type {
   align-items: center;
 
   &:focus {
-    outline: 1px solid hsl(var(--secondary-hs), calc(var(--secondary-l) + 50));
+    outline: 1px solid hsl(var(--secondary-hs), calc(var(--secondary-l) + 50%));
   }
 
   &:not(.no-rounded) {
@@ -902,7 +906,7 @@ option[disabled]:first-of-type {
 
   thead,
   .tabular-header {
-    color: var(--secondary, hsl(var(--secondary-hs), calc(var(--secondary-l) + 10)));
+    color: var(--secondary, hsl(var(--secondary-hs), calc(var(--secondary-l) + 10%)));
     font-weight: bold;
 
     &.sticky-header {
@@ -930,7 +934,7 @@ option[disabled]:first-of-type {
     background-color: var(--white);
 
     &:nth-child(even):not(.tabular-header) {
-      background-color: hsl(var(--muted-hs), calc(var(--muted-l) + 60%));
+      background-color: hsl(var(--muted-hs), calc(var(--muted-l) + 40%));
     }
 
     [class*=col] {
@@ -1184,7 +1188,7 @@ option[disabled]:first-of-type {
     flex: 1 1 25%;
     width: 25%;
     padding-left: 0.75rem;
-    font-weight: bold;
+    /* font-weight: bold; */
   }
 
   .addon {
