--- a/styles/sidebar.scss
+++ b/styles/sidebar.scss
@@ -296,7 +296,7 @@
 
 /* Tablets/Mini PC --> BELOW */
 @media (max-width:767.98px) {
-  .btn {
+  .sidebar .btn {
     min-width: auto;
     /* display: flex;
     justify-content: center;
